--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,6 +58,8 @@ dependencies {
 
     implementation 'com.google.firebase:firebase-firestore-ktx'
 
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
+
 
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
